Fix issue with the column-gap

--- a/src/app/common/components/topbar/topbar.component.scss
+++ b/src/app/common/components/topbar/topbar.component.scss
@@ -15,7 +15,7 @@
 
   display: flex;
   align-items: center;
-  column-gap: 4px;
+  column-gap: 2px;
 
   background-color: white;
   font-size: 13px;
@@ -24,7 +24,6 @@
     margin-bottom: 0;
     text-align: center;
   }
-
 }
 
 button:hover {
@@ -35,5 +34,5 @@ mat-icon {
   font-size: 20px;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
 }
